<resources>
    <string name="app_name">Online Shop Project Kotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started_button">Let’s Get Started</string>

    <string name="intro_title">Welcome to <font color="#50B498"> Online Shop</font>\n  a <font color="#50B498"> OnlyTech</font> </string>
    <string name="sign_in">Already have an account? <font color="#50B498"> Sign in</font> </string>
    <string name="intro_sub_title">Use the latest technology, update your style. \n
Enjoy fast, free shipping</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="see_all">See all</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="id">id:</string>
    <string name="titel">Titel</string>
    <string name="recommendation">Recommendation</string>
    <string name="sales">Sales</string>
    <string name="audio">Audio</string>
    <string name="gaming">Gaming</string>
    <string name="mobile">Mobile</string>
    <string name="tv">Tv</string>
    <string name="image_description">Buy is now</string>
</resources>