<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_category_1"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="0.25"
        android:backgroundTint="@color/lightGrey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/audio_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio"
                android:textColor="@color/categories"
                android:textSize="12sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_category_2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="0.25"
        android:backgroundTint="@color/lightGrey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/gaming_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gaming"
                android:textColor="@color/categories"
                android:textSize="12sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_category_3"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="0.25"
        android:backgroundTint="@color/lightGrey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/phone_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:textColor="@color/categories"
        android:textSize="12sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_category_4"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="0.25"
        android:backgroundTint="@color/lightGrey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/tv_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv"
        android:textColor="@color/categories"
        android:textSize="12sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>